feat/App.Shared added. HashingHelper added. SqlServer, ConnectingString implemented. Generic Entity<T> implemented.

--- a/App.Auth.Api/appsettings.json
+++ b/App.Auth.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AuthDbConnection": "Server=localhost;Database=PersonalBlogAuthDb;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
 }
