--- a/App.Data.Api/appsettings.json
+++ b/App.Data.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DataDbConnection": "Server=localhost;Database=PersonalBlogDataDb;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
 }
