AboutMe Get,Update,Delete actions implemented.

--- a/App.Data.Api/appsettings.json
+++ b/App.Data.Api/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DataDbConnection": "Server=localhost;Database=PersonalBlogDataDb;Trusted_Connection=True;TrustServerCertificate=True;"
-  }
+  },
+  "FileApi": "https://localhost:7207"
 }
