--- a/App.File.Api/App.File.Api.csproj
+++ b/App.File.Api/App.File.Api.csproj
@@ -10,11 +10,16 @@
     <PackageReference Include="Ardalis.Result" Version="10.0.0" />
     <PackageReference Include="Ardalis.Result.AspNetCore" Version="10.0.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.10.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.8.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.9.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\App.Shared\App.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+    <Folder Include="wwwroot\uploads\" />
   </ItemGroup>
 
 </Project>
