feat/Created ViewModels. section to partial views.

--- a/App.Client/appsettings.json
+++ b/App.Client/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "FileApiUrl": "https://localhost:7207",
+  "DataApiUrl": "https://localhost:7094",
+  "AuthApiUrl": "https://localhost:7213"
 }
