--- a/App.Client/App.Client.csproj
+++ b/App.Client/App.Client.csproj
@@ -20,4 +20,9 @@
     <None Include="wwwroot\scss\bootstrap\.DS_Store" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+    <Folder Include="Views\Home\Blogpost\" />
+  </ItemGroup>
+
 </Project>
