feat/HomeController ApiHttpRequestServices implemented and injected.

--- a/App.Client/App.Client.csproj
+++ b/App.Client/App.Client.csproj
@@ -24,4 +24,8 @@
     <Folder Include="Views\Home\Blogpost\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\App.Shared\App.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
