--- a/App.Client/App.Client.csproj
+++ b/App.Client/App.Client.csproj
@@ -25,6 +25,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\App.Shared\App.Shared.csproj" />
   </ItemGroup>
 
