--- a/App.Client/appsettings.json
+++ b/App.Client/appsettings.json
@@ -6,7 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "FileApiUrl": "https://localhost:7207",
-  "DataApiUrl": "https://localhost:7094",
-  "AuthApiUrl": "https://localhost:7213"
+  "ExternalApis": {
+    "FileApiUrl": "https://localhost:7207",
+    "DataApiUrl": "https://localhost:7094",
+    "AuthApiUrl": "https://localhost:7213"
+  }
 }
