--- a/App.Data.Api/appsettings.json
+++ b/App.Data.Api/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DataDbConnection": "Server=localhost;Database=PersonalBlogDataDb;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DataDbConnection": "Server=localhost;Database=PersonalBlogDataDb;Trusted_Connection=True;TrustServerCertificate=True;",
+    "AuthDbConnection": "Server=localhost;Database=PersonalBlogAuthDb;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "FileApiUrl": "https://localhost:7207"
 }
