Authenticaon implemented. JwtBeaere implemented to Swagger. ProfilePicture Upload implemented.

--- a/App.Auth.Api/appsettings.json
+++ b/App.Auth.Api/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "AuthDbConnection": "Server=localhost;Database=PersonalBlogAuthDb;Trusted_Connection=True;TrustServerCertificate=True;"
-  }
+  },
+  "FileApiUrl": "https://localhost:7207"
 }
