ViewModels convert to dynmaic from models.

--- a/App.Client/App.Client.csproj
+++ b/App.Client/App.Client.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>0dc3b555-e0f3-47f3-a795-791c591a7b75</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
