--- a/App.Admin/appsettings.json
+++ b/App.Admin/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ExternalApis": {
+    "FileApiUrl": "https://localhost:7207",
+    "DataApiUrl": "https://localhost:7094",
+    "AuthApiUrl": "https://localhost:7213"
+  }
 }
