--- a/App.Client/App.Client.csproj
+++ b/App.Client/App.Client.csproj
@@ -8,6 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Views\Home\Blogpost\**" />
+    <Content Remove="Views\Home\Blogpost\**" />
+    <EmbeddedResource Remove="Views\Home\Blogpost\**" />
+    <None Remove="Views\Home\Blogpost\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Remove="C:\Users\emrei\.nuget\packages\ntoastnotify\8.0.0\contentFiles\any\net6.0\wwwroot\noty.js" />
     <Content Remove="C:\Users\emrei\.nuget\packages\ntoastnotify\8.0.0\contentFiles\any\net6.0\wwwroot\toastr.js" />
   </ItemGroup>
@@ -24,10 +31,6 @@
     <None Include="wwwroot\js\.DS_Store" />
     <None Include="wwwroot\scss\.DS_Store" />
     <None Include="wwwroot\scss\bootstrap\.DS_Store" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Views\Home\Blogpost\" />
   </ItemGroup>
 
   <ItemGroup>
