fixed: Controllers and Services fixed to Api's.

--- a/App.Data.Api/appsettings.json
+++ b/App.Data.Api/appsettings.json
@@ -10,5 +10,6 @@
     "DataDbConnection": "Server=localhost;Database=PersonalBlogDataDb;Trusted_Connection=True;TrustServerCertificate=True;",
     "AuthDbConnection": "Server=localhost;Database=PersonalBlogAuthDb;Trusted_Connection=True;TrustServerCertificate=True;"
   },
-  "FileApiUrl": "https://localhost:7207"
+  "FileApiUrl": "https://localhost:7207",
+  "Domain": "https://localhost:7094"
 }
