feat: Google reCAPTCHA implemented to ContactMessage.

--- a/App.Client/appsettings.json
+++ b/App.Client/appsettings.json
@@ -24,5 +24,9 @@
     "Username": "appemailsiliconmade@gmail.com",
     "Password": "rdql wabb kekd mwkl",
     "EnableSsl": true
+  },
+  "RecaptchaSettings": {
+    "SecretKey": "6LePiI8qAAAAAGOd4wp3NE-TLSESHQvyUZ8amk8J",
+    "SiteKey": "6LePiI8qAAAAANuUm4DseVLPw667FF4OFv0b2Bhe"
   }
 }
