feat(aspire): add Aspire framework to the project

--- a/App.Admin/App.Admin.csproj
+++ b/App.Admin/App.Admin.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\App.Shared\App.Shared.csproj" />
+    <ProjectReference Include="..\ServiceDefaults\ServiceDefaults.csproj" />
   </ItemGroup>
 
   <ItemGroup>
