--- a/App.Auth.Api/App.Auth.Api.csproj
+++ b/App.Auth.Api/App.Auth.Api.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <ProjectReference Include="..\App.Data\App.Data.csproj" />
     <ProjectReference Include="..\App.Shared\App.Shared.csproj" />
+    <ProjectReference Include="..\ServiceDefaults\ServiceDefaults.csproj" />
   </ItemGroup>
 
 </Project>
