--- a/App.Client/App.Client.csproj
+++ b/App.Client/App.Client.csproj
@@ -41,6 +41,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\App.Shared\App.Shared.csproj" />
+    <ProjectReference Include="..\ServiceDefaults\ServiceDefaults.csproj" />
   </ItemGroup>
 
   <ItemGroup>
