--- a/App.Data.Api/App.Data.Api.csproj
+++ b/App.Data.Api/App.Data.Api.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <ProjectReference Include="..\App.Data\App.Data.csproj" />
     <ProjectReference Include="..\App.Shared\App.Shared.csproj" />
+    <ProjectReference Include="..\ServiceDefaults\ServiceDefaults.csproj" />
   </ItemGroup>
 
 </Project>
